--- a/vagrantfile
+++ b/vagrantfile
@@ -57,7 +57,7 @@ Vagrant.configure("2") do |config|
     name: "force timezone set", inline:'tzutil.exe /s "Eastern Standard Time"'
 
   #Provision section
-  config.vm.provision "a", type: "file", source: "script.ps1", destination: "/tmp/script.ps1"
+  #config.vm.provision "a", type: "file", source: "script.ps1", destination: "/tmp/script.ps1"
   config.vm.provision "b", type: "shell", privileged:"true", powershell_elevated_interactive:"true",
     inline: 'iwr -Uri "'+gist_url+'" -OutFile "\tmp\script.ps1"'
   config.vm.provision "c", type: "shell", privileged:"true", powershell_elevated_interactive:"true",
