--- a/vagrantfile
+++ b/vagrantfile
@@ -1,9 +1,3 @@
-# -*- mode: ruby -*-							# other commands:
-# vi: set ft=ruby :								#   vagrant up --no-provision
-# local: vagrant up --provision-with a,c		#   vagrant snapshot save "clean"
-# web:  vagrant up --provision-with b,c			#   vagrant reload --provision-with a,c
-												#   vagrant snapshot restore "clean" --no-provision
-#machine_name = "SCCM1607"
 machine_name = "MDT2013U201"
 gist_url="https://gist.githubusercontent.com/brianfgonzalez/fa0720471ce2f6722d3ced4672e3f47a/raw/a4efb95b2e1fb5dd21167619bc1742decbb2049e/mdt2013u2.ps1"
 
@@ -38,7 +32,7 @@ Vagrant.configure("2") do |config|
     v.customize ["guestproperty", "set", :id, "/VirtualBox/GuestAdd/VBoxService/--timesync-set-threshold", "1000"]
   end
   
-  ["vmware_fusion", "vmware_workstation"].each do |provider|
+  ["vmware_fusion", "vmware_workstation", "vmware_desktop"].each do |provider|
 	  config.vm.provider :provider do |v, override|
 	    v.gui = true
 	    v.name = machine_name
